   set to disable the test by default.  it should be enabled for systems
   with SAN attached disk.

6) appdynamics-machine-agent.sh now works on older linuxes that don't support
   ps -h.

7) simplified logging by eliminating the seperate SQL_ERROR path.

--------------------------------------
Release notes for version 3.5.1

1) Catch case when newly compiled /sbin/appdservice does not overwrite incumbent
   by removing old version first.

--------------------------------------
Release notes for version 3.5.2

1) the pesky messages about /root/.forever when trying to stop the appdcontroller
   service is now gone.  it was a coding error.

--------------------------------------
Release notes for version 3.5.3

1) the dbopfail watchdog test is suspect.  it is disabled by default both
   in the watchdog.sh and watchdog.settings.template

--------------------------------------
Release notes for version 3.6

1) the reporting service and events services on the local box were not being
   properly started and stopped by the init script, especially if the script
   in bin/controller.sh was also being used to manage these services.

--------------------------------------
Release notes for version 3.7

1) the watchdog.settings.template has an extensive comment concerning the
   reasons for when the dbop test should be enabled, and disables the test
   by default

2) lib/log.sh now does the password masking using unbuffered sed.  this makes
   the output of replicate.sh in the log file more interactive.

3) a typo in appdynamics-machine-agent.sh rarely would cause the machine agent
   to not start.

4) the machine agent service status now is properly factored out of 
   appdcontroller.sh

5) pbrun is now probed for in /usr/local/bin and /usr/bin

6) if the events directory is renamed, the init script makes no attempt
   to start or stop the events service.

7) a typo prevented explicit huge pages from being allocated

