@@ -1,1 +1,2 @@
 HA.shar
+INSTALLTARGETS
